--- a/bankingProject/bankingApp/frontend/package.json
+++ b/bankingProject/bankingApp/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/vue-chartjs": "^2.0.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
